--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,3 +1,34 @@
+$enable-responsive-font-sizes: true;
+//page colors
+$qg-dark-a: #30363d;
+$qg-dark-b: #0d1117;
 $body-color: #fff;
+$body-bg: $qg-dark-b;
+
+$theme-colors: (
+  'qg-dark-a': $qg-dark-a,
+  'qg-dark-b': $qg-dark-b,
+);
 
 @import '~bootstrap/scss/bootstrap';
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css');
+//Profile classnames
+.title {
+  @include font-size(2.5rem);
+  font-weight: 800;
+  margin-bottom: 0;
+}
+
+.subTitle {
+  @include font-size(2rem);
+  font-weight: 500;
+}
+
+.profileIcon {
+  position: absolute;
+  transform: translate(-36px, 155px);
+  background-color: $qg-dark-a;
+  padding: 6px 10px;
+  border-radius: 2rem;
+  border: 1px solid $gray-700;
+}
