--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,3 +4,4 @@ $enable-responsive-font-sizes: true;
 @import '~bootstrap/scss/bootstrap';
 @import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css');
 @import './profile.scss';
+@import './repository.scss';
